feat solution.ipynb : cleaned and refactored the code to Python conventions.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computer Science Refershments Project 1\n",
+    "# Computer Science Refresher Project 1\n",
     "\n",
     "## Description\n",
     "\n",
-    "TODO\n",
+    "The problem given was the following : we want to set up an indoor location system, like an indoor GPS. In this project we will focus on computing the error of detection of the position of a moving object. Thus, we have the trajectory that the object is supposed to follow and the one that the location system says it has followed. The goal is to compute the error of detected trajectory. The given result should be the ratio between the area between the two trajectories, and the length of the theoretical path.\n",
     "\n",
     "## Solution: \n",
     "_Divide and Conquer !_\n",
@@ -18,8 +18,9 @@
     "- reach a _vertex_ in the experimental trajectory\n",
     "\n",
     "How to calculate the error:\n",
-    "__The sum of the areas of the \"Trapezium\" formed by two points on the theoretical trajectory and two points of the experimental trajectory__\n",
-    "o When two points from the experimental and theoretical trajectories are equals, the area is a triangle. "
+    "\n",
+    "__The total area between the two paths is the sum of the areas of the \"trapeziums\" formed by two points on the theoretical trajectory and two points of the experimental trajectory.__\n",
+    "When two points from the experimental and theoretical trajectories are equal, the area is a triangle. "
    ]
   },
   {
@@ -36,102 +37,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def trajectoryError(coordTh,coordExp):\n",
+    "def trajectoryError(coord_th,coord_exp):\n",
     "    \"\"\"\n",
-    "    arg1 coordTh : a list of tuples (x,y). The path which should be followed.\n",
-    "    arg2 coordExp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
-    "    return: error, the total area difference betweeen the theoretical trajectory and the experimental one divided by the distance.\n",
+    "    arg1 coord_th : a list of tuples (x,y). The path which should be followed.\n",
+    "    arg2 coord_exp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
+    "    return: error, the total area difference betweeen the theoretical trajectory\n",
+    "    and the experimental one divided by the length of coord_th.\n",
     "    \"\"\"\n",
     "    # initialize values:\n",
     "    area = 0 # the total area between the theoretical and experimental paths\n",
-    "    distance = path_length(coordTh) # total theoretical path length\n",
+    "    distance = path_length(coord_th) # total theoretical path length\n",
     "    j = 0 # iterator over the experimental path\n",
     "    i = 0 # iterator over the theoretical path\n",
     "    \n",
     "    # start iterations:\n",
-    "    while (i+1 < len(coordTh) and j+1 < len(coordExp)):     \n",
-    "        # we work on a subsegment [coordTh[i], coordTh[i+1]] \n",
-    "        \n",
-    "        print()\n",
-    "        print(\"coordTh[i] -> \", coordTh[i])\n",
-    "        print(\"coordTh[i+1] -> \", coordTh[i+1])\n",
-    "        print(\"coordExp[j] -> \", coordExp[j])\n",
-    "        print(\"coordExp[j+1] -> \", coordExp[j+1])\n",
-    "        \n",
+    "    while (i+1 < len(coord_th) and j+1 < len(coord_exp)):     \n",
+    "        # we work on a subsegment [coord_th[i], coord_th[i+1]]        \n",
     "        # search for an intersection:\n",
-    "        intersectPoint = intersection(coordTh[i], coordTh[i+1], coordExp[j], coordExp[j+1]) \n",
+    "        intersect_point = intersection(coord_th[i], coord_th[i+1], coord_exp[j], coord_exp[j+1]) \n",
     "        # compute orthogonal projections:\n",
-    "        ortproj1 =  ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j])\n",
-    "        ortproj2 =  ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j+1])\n",
+    "        ort_proj1 =  ortogonal_projection(coord_th[i], coord_th[i+1], coord_exp[j])\n",
+    "        ort_proj2 =  ortogonal_projection(coord_th[i], coord_th[i+1], coord_exp[j+1])\n",
     "                \n",
-    "        if intersectPoint:\n",
+    "        if intersect_point:\n",
     "            \n",
-    "            if intersectPoint == coordTh[i+1] == coordExp[j]:\n",
+    "            if intersect_point == coord_th[i+1] == coord_exp[j]:\n",
     "                # we're outside of the subsegment\n",
-    "                i += 1 # advance along the theoretical path \n",
+    "                i += 1 # advance along the theoretical path                 \n",
     "                \n",
-    "                print(\"advance along the theoretical path\")\n",
-    "                \n",
-    "            elif pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1) and pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1):\n",
+    "            elif point_belongs_to_segment(coord_th[i], coord_th[i+1], ort_proj1)\\\n",
+    "            and point_belongs_to_segment(coord_th[i], coord_th[i+1], ort_proj1):\n",
     "                # Before the intersection:\n",
-    "                # the points form the right triangle -> coordExp[j], ortproj(coordExp[j]), intersection\n",
-    "                base = seg_length(ortproj1, intersectPoint)\n",
-    "                height =  seg_length(coordExp[j], ortproj1)\n",
-    "                area += areaRightTriangle(base, height)\n",
+    "                # the points form the right triangle -> coord_exp[j], its projection, intersection\n",
+    "                base = seg_length(ort_proj1, intersect_point)\n",
+    "                height =  seg_length(coord_exp[j], ort_proj1)\n",
+    "                area += area_right_triangle(base, height)\n",
     "                \n",
     "                # After the intersection:\n",
-    "                # the points form the right triangle -> intersectPoint, coordExp[j+1], ortproj(coordExp[j+1])\n",
-    "                base = seg_length(intersectPoint, ortproj2)\n",
-    "                height =  seg_length(coordExp[j+1], ortproj2)\n",
-    "                area += areaRightTriangle(base, height)\n",
+    "                # the points form the right triangle -> intersect_point, coord_exp[j+1], its projection\n",
+    "                base = seg_length(intersect_point, ort_proj2)\n",
+    "                height =  seg_length(coord_exp[j+1], ort_proj2)\n",
+    "                area += area_right_triangle(base, height)\n",
     "                \n",
     "                j += 1 # advance along the experimental path \n",
-    "                        \n",
-    "                print(\"advance along the experimental path\")\n",
     "            \n",
     "            else:\n",
     "                # Before the intersection:\n",
-    "                # the points form the right triangle -> coordExp[j], ortproj(coordExp[j]), intersection\n",
-    "                base = seg_length(coordExp[j], intersectPoint)\n",
-    "                height =  seg_length(coordTh[i], ortogonalProjection(coordExp[j], intersectPoint, coordTh[i]))\n",
-    "                area += areaRightTriangle(base, height)\n",
+    "                # the points form the right triangle -> coord_exp[j], its projection, intersection\n",
+    "                base = seg_length(coord_exp[j], intersect_point)\n",
+    "                height =  seg_length(coord_th[i],\\\n",
+    "                                     ortogonal_projection(coord_exp[j], intersect_point, coord_th[i]))\n",
+    "                area += area_right_triangle(base, height)\n",
     "                \n",
     "                # After the intersection:\n",
-    "                # the points form the right triangle -> intersectPoint, coordExp[j+1], ortproj(coordExp[j+1])\n",
-    "                base = seg_length(intersectPoint, coordExp[j+1])\n",
-    "                height =  seg_length(coordTh[i+1], ortogonalProjection(coordExp[j+1], intersectPoint, coordTh[i+1]))\n",
-    "                area += areaRightTriangle(base, height)\n",
+    "                # the points form the right triangle -> intersect_point, coord_exp[j+1], its projection\n",
+    "                base = seg_length(intersect_point, coord_exp[j+1])\n",
+    "                height =  seg_length(coord_th[i+1],\\\n",
+    "                                     ortogonal_projection(coord_exp[j+1], intersect_point, coord_th[i+1]))\n",
+    "                area += area_right_triangle(base, height)\n",
     "                \n",
     "                j += 1 # advance along the experimental path \n",
-    "                        \n",
-    "                print(\"advance along the experimental path\")\n",
     "                \n",
-    "        elif pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1) and pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1):     \n",
+    "        elif point_belongs_to_segment(coord_th[i], coord_th[i+1], ort_proj1)\\\n",
+    "        and point_belongs_to_segment(coord_th[i], coord_th[i+1], ort_proj1):     \n",
     "            \n",
-    "            area += computeArea(ortproj1, ortproj2, coordExp[j], coordExp[j+1])\n",
+    "            area += compute_area(ort_proj1, ort_proj2, coord_exp[j], coord_exp[j+1])\n",
     "            j += 1 # advance along the experimental path  \n",
-    "            \n",
-    "            print(\"advance along the experimental path\")\n",
     "        \n",
     "        else:\n",
     "            # we're outside of the subsegment\n",
     "            i += 1 # advance along the theoretical path\n",
     "            \n",
-    "            print(\"advance along the theoretical path\")\n",
-    "        \n",
     "        ## TODO check for backtracking:\n",
     "        \n",
-    "        # a) if ort1 or ort2 in in segment [ coordTh[i] , prevOrt1 ] or [ coordTh[i] , prevOrt2 ]\n",
+    "        # a) if ort1 or ort2 in in segment [ coord_th[i] , prevOrt1 ] or [ coord_th[i] , prevOrt2 ]\n",
     "        \n",
     "        # b) identify the area to remove \n",
-    "        \n",
-    "    print(\"total area= \", area)\n",
-    "    print(\"distance= \", distance)\n",
-    "                \n",
+    "\n",
     "    return area / distance\n",
     "\n",
     "\n",
@@ -198,9 +184,10 @@
     "            # The solution is the inverted matrix\n",
     "            intersect = ( (b_y-b_x)/(a_x-a_y),\\\n",
     "                          (b_y * a_x - b_x * a_y)/(a_x - a_y) )\n",
-    "    # If a point is found, check if it belongs to the segments and not only the lines (x_1[0]<intersect[0]<x_2[0] or...)\n",
+    "    # If a point is found, check if it belongs to the segments\n",
+    "    # and not only to the lines.\n",
     "    if intersect:\n",
-    "        if not pointBelongsToSegment(x_1, x_2, intersect) and not pointBelongsToSegment(y_1, y_2, intersect):\n",
+    "        if not point_belongs_to_segment(x_1, x_2, intersect) and not point_belongs_to_segment(y_1, y_2, intersect):\n",
     "        #if not ( (intersect[0] >= min(x_1[0],x_2[0])) and (intersect[0] <= max(x_1[0],x_2[0]))\\\n",
     "        #        and (intersect[1] >= min(x_1[1],x_2[1])) and (intersect[1] <= max(x_1[1],x_2[1]))\\\n",
     "        #        and (intersect[0] >= min(y_1[0],y_2[0])) and (intersect[0] <= max(y_1[0],y_2[0]))\\\n",
@@ -209,31 +196,30 @@
     "    \n",
     "    return intersect\n",
     "\n",
-    "\n",
-    "def ortogonalProjection(x_1, x_2, y):\n",
+    "def ortogonal_projection(x_1, x_2, y):\n",
     "    \"\"\"\n",
-    "    Computes the orthogonal projection of y on the segment made up of the points x_1 and x_2.\n",
+    "    Compute the orthogonal projection of y on the line made up of the points x_1 and x_2.\n",
+    "    \n",
     "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
     "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
-    "    return: newPoint. A tuple, the coordinates of the orthogonal projection on y on the segment [x_1,x_2]\n",
+    "    return: new_point. A tuple, the coordinates of the orthogonal projection on y on the segment [x_1,x_2]\n",
     "    \"\"\"\n",
     "    \n",
-    "    # By removing the idea that ortogonalProjection() return \"None\" if the point does not belong to the segment. None of the test return errors!\n",
-    "    \n",
-    "    # newPoint = None\n",
-    "    if pointBelongsToSegment(x_1, x_2, y): # y already belongs to the segemnt [x_1, x_2]\n",
-    "        newPoint = y\n",
+    "    if point_belongs_to_segment(x_1, x_2, y): # y already belongs to the segment [x_1, x_2]\n",
+    "        new_point = y\n",
+    "        \n",
+    "    # Now we want to find the equation of the line containing x_1 and x_2.\n",
+    "    # We have to tackle the case of the vertical line first, because\n",
+    "    # we can't find a slope. Then we can tackle the other case,\n",
+    "    # with a slope and intercept.\n",
     "    \n",
     "    elif x_1[0] == x_2[0] :\n",
     "        # First case : the line containing x_1 and x_2 is vertical\n",
-    "        # Be careful ! If the ordinate is not in the segment then we have to change it.\n",
-    "        #if (x_1[1] <= y[1] and y[1] <= x_2[1]) :\n",
-    "        newPoint = (x_1[0],y[1])\n",
-    "        #else :\n",
-    "        #    newPoint = None\n",
+    "        new_point = (x_1[0],y[1])\n",
     "    \n",
     "    else :\n",
-    "    # Second case : the line containing x_1 and x_2 is not vertical\n",
+    "    # Second case : the line containing x_1 and x_2 is not vertical,\n",
+    "    # so we look for its slope and intercept.\n",
     "        a = (x_2[1]-x_1[1])/(x_2[0]-x_1[0])\n",
     "        b = x_1[1] - a * x_1[0]\n",
     "        # Now we know the line containing x_1 and x_2 has the equation y = a * x + b\n",
@@ -246,36 +232,40 @@
     "        # -x - a*y = -c\n",
     "        mat = np.array([[a,-1],[-1,-a]])\n",
     "        point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
-    "        newPoint = (point[0],point[1])\n",
-    "    \n",
-    "    #if (newPoint and (not pointBelongsToSegment(x_1,x_2,newPoint))) :\n",
-    "    #    newPoint = None\n",
+    "        new_point = (point[0],point[1])\n",
     "        \n",
-    "    return newPoint\n",
+    "    return new_point\n",
     "                       \n",
-    "def computeArea(x_1, x_2, y_1, y_2):               \n",
+    "def compute_area(x_1, x_2, y_1, y_2):               \n",
     "    \"\"\" \n",
+    "    Compute the area of the quadrilateral formed by the four given points.\n",
+    "    To compute it, it splits the quadrilateral into two triangles, with (x_1,y_2)\n",
+    "    as splitting line. Thus, be careful of not giving these two points as successive\n",
+    "    points, otherwise the computed area may be different from what you expect.\n",
+    "    \n",
     "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
     "    arg3,4 y_i: A tuple, the coordinates of a point on the experimental trajectory\n",
-    "    return: area. An int, the area of the figure formed by the 4 coordinates\n",
+    "    return: area. An int, the area of the figure formed by the 4 points\n",
     "    \"\"\"\n",
     "    area = 0\n",
     "    \n",
+    "    # Let's split into two triangles, on either side of (x_1,y_2)\n",
+    "    \n",
     "    # first triangle:\n",
     "    base = seg_length(x_1, y_2)\n",
-    "    height = seg_length(x_2, ortogonalProjection(x_1, y_2, x_2))\n",
-    "    area += areaRightTriangle(base, height)\n",
+    "    height = seg_length(x_2, ortogonal_projection(x_1, y_2, x_2))\n",
+    "    area += area_right_triangle(base, height)\n",
     "    \n",
     "    # second triangle:\n",
     "    base = seg_length(x_1, y_2)\n",
-    "    height =  seg_length(y_1, ortogonalProjection(x_1, y_2, y_1))\n",
-    "    area += areaRightTriangle(base, height)\n",
+    "    height =  seg_length(y_1, ortogonal_projection(x_1, y_2, y_1))\n",
+    "    area += area_right_triangle(base, height)\n",
     "\n",
     "    return area\n",
     "\n",
-    "def areaRightTriangle(base, height):\n",
+    "def area_right_triangle(base, height):\n",
     "    \"\"\"\n",
-    "    Computes the area of a right triangle.\n",
+    "    Compute the area of a right triangle.\n",
     "    \n",
     "    arg1: base. A numeral, the length of the basis of the triangle \n",
     "    arg2: height. A numeral, the length of the basis of the triangle\n",
@@ -283,35 +273,38 @@
     "    \"\"\"\n",
     "    return np.abs((base * height) / 2)\n",
     "\n",
-    "def pointBelongsToSegment(x_1, x_2, y):\n",
+    "def point_belongs_to_segment(x_1, x_2, y):\n",
     "    \"\"\"\n",
+    "    Check if a point belongs to a segment.\n",
+    "    \n",
     "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
     "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: A boolean, True if y belongs to the segment [x_1,x_2]. False otherwise.\n",
     "    \"\"\"\n",
-    "    #check that x_1, x_2 and y are aligned:\n",
-    "    crossproduct = (y[1] - x_1[1]) * (x_2[0] - x_1[0]) - (y[0] - x_1[0]) * (x_2[1] - x_1[1])\n",
-    "    if (isinstance(crossproduct, int) and abs(crossproduct) != 0) or (isinstance(crossproduct,float) and abs(crossproduct) > 0.0000000001):\n",
+    "    # A necessary condition is that x_1, x_2 and y are aligned.\n",
+    "    # Otherwise y can't be in the segment.\n",
+    "    # compute the cross product of the points : if it is 0, it means they are not aligned.\n",
+    "    # Given the calculation performed, if the result is a float we consider that\n",
+    "    # if it is smaller than 10**(-10), it is zero up to machine error.\n",
+    "    cross_product = (y[1] - x_1[1]) * (x_2[0] - x_1[0]) - (y[0] - x_1[0]) * (x_2[1] - x_1[1])\n",
+    "    if (isinstance(cross_product, int) and abs(cross_product) != 0)\\\n",
+    "    or (isinstance(cross_product,float) and abs(cross_product) > 0.0000000001):\n",
     "        return False\n",
     "\n",
-    "    #check that y belongs to the segment:\n",
-    "    dotproduct = (y[0] - x_1[0])*(x_2[0] - x_1[0]) + (y[1] - x_1[1])*(x_2[1] - x_1[1])\n",
-    "    if dotproduct < 0:\n",
+    "    # Now, the case when the points are aligned : we compute the dot product\n",
+    "    # between (y-x_1) and (x_2-x1).\n",
+    "    dot_product = (y[0] - x_1[0])*(x_2[0] - x_1[0]) + (y[1] - x_1[1])*(x_2[1] - x_1[1])\n",
+    "    if dot_product < 0:\n",
+    "        # Then y is beyond x_1, not between the two points.\n",
     "        return False\n",
     "\n",
-    "    squaredSegmentLength = seg_length(x_1,x_2)**2\n",
-    "    if dotproduct > squaredSegmentLength:\n",
+    "    squared_segment_length = seg_length(x_1,x_2)**2\n",
+    "    if dot_product > squared_segment_length:\n",
+    "        # Then y is beyond x_2, not between the two points.\n",
     "        return False\n",
     "\n",
     "    return True"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
