feat test.ipynb : cleaned and refactored the code to Python writing conventions.

--- a/Objects.ipynb
+++ b/Objects.ipynb
@@ -52,12 +52,11 @@
     "    \n",
     "    def __eq__(self,other):\n",
     "        \"\"\"\n",
-    "        arg1 other : the point we wanna compare to.\n",
+    "        arg1 other : the point we want to compare to.\n",
     "        return : a bool, equal to True iff self represents the same point as other,\n",
     "        ie if it has same abscissa and ordinate.\n",
     "        \"\"\"\n",
     "        return(self.x == other.x and self.y == other.y)\n",
-    "    \n",
     "\n",
     "doctest.testmod()"
    ]
@@ -239,11 +238,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -272,27 +266,6 @@
     "        self.theo = theo\n",
     "        self.expe = expe\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bool"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = True\n",
-    "type(a)"
    ]
   }
  ],
