--- a/solution.ipynb
+++ b/solution.ipynb
@@ -20,7 +20,20 @@
     "How to calculate the error:\n",
     "\n",
     "__The total area between the two paths is the sum of the areas of the \"trapeziums\" formed by two points on the theoretical trajectory and two points of the experimental trajectory.__\n",
-    "When two points from the experimental and theoretical trajectories are equal, the area is a triangle. "
+    "When two points from the experimental and theoretical trajectories are equal, the area is a triangle. \n",
+    "\n",
+    "## Note on data structure :\n",
+    "The data structure chosen by the group to model a test case is the following :\n",
+    "\n",
+    "A sequence of ints, only separated by commas, without any bracket, representing the abscissas of the theoretical path\n",
+    "A sequence of ints, only separated by commas, without any bracket, representing the ordinates of the theoretical path\n",
+    "A sequence of ints, only separated by commas, without any bracket, representing the abscissas of the experimental path\n",
+    "A sequence of ints, only separated by commas, without any bracket, representing the ordinates of the experimental path\n",
+    "The result expected.\n",
+    "The error tolerated.\n",
+    "\n",
+    "However, ours is :\n",
+    "Each path is a list of tuples, each tuple representing the coordinates of a point. This explains the function oracle_parser in test.ipynb and test.py."
    ]
   },
   {
@@ -41,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def trajectoryError(coord_th,coord_exp):\n",
+    "def trajectory_error(coord_th,coord_exp):\n",
     "    \"\"\"\n",
     "    arg1 coord_th : a list of tuples (x,y). The path which should be followed.\n",
     "    arg2 coord_exp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
